[package]
name = "preferences-ron"
version = "2.0.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>", "danda <dan-da@users.noreply.github.com>"]

description = "Read and write user-specific application data using RON format"
documentation = "https://docs.rs/preferences-ron"
repository = "https://github.com/dan-da/preferences-ron"
readme = "README.md"
keywords = ["preferences", "user", "data", "persistent", "storage"]
license = "MIT"

[dependencies]
app_dirs = "^1.1.1"
serde = "^1.0.0"
ron = "0.6.4"

[dev-dependencies]
serde_derive = "^1.0.0"
